// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatCommentBody golden snapshots matches golden snapshot for missing trustline failure path 1`] = `
"<!-- trustbridge-action:sticky-comment -->
## TrustBridge — Stellar Account Check

Checked account: \`GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\`
Horizon: \`https://horizon.stellar.org\`
Asset: **USDC** · Issuer: \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

### Results

- ✅ **Account funded** — Account exists on Horizon.
- ❌ **USDC trustline** — Account does not hold a trustline for USDC.
- ✅ **XLM reserve** — Balance 5.0 XLM >= minimum 1.5 XLM.

### Balances

- **XLM balance:** \`5.0000000 XLM\`
- **Minimum required:** \`1.5 XLM\`

### Setup cost estimate

- Stellar minimum account balance: **1 XLM**
- Base reserve per trustline (ledger entry): **0.5 XLM**
- Typical minimum to fund account + one trustline: **~1.5 XLM**

### Add a trustline

- [View account on Stellar Laboratory](https://laboratory.stellar.org/#account-viewer?network=public&account=GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)
- [Open Transaction Builder (Change Trust)](https://laboratory.stellar.org/#txbuilder?network=public)
- [LOBSTR wallet](https://lobstr.co/) — add asset **USDC** from issuer \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

### Remediation

Add a trustline for asset USDC issued by GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN.

---
_Posted by [trustbridge-action](https://github.com/Stellar-TrustBridge/trustbridge-action)_"
`;

exports[`formatCommentBody golden snapshots matches golden snapshot for successful validation result 1`] = `
"<!-- trustbridge-action:sticky-comment -->
## TrustBridge — Stellar Account Check

Checked account: \`GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\`
Horizon: \`https://horizon.stellar.org\`
Asset: **USDC** · Issuer: \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

### Results

- ✅ **Account funded** — Account exists on Horizon.
- ✅ **USDC trustline** — Trustline exists with balance 50.0.
- ✅ **XLM reserve** — Balance 10.5 XLM >= minimum 1.5 XLM.

### Balances

- **XLM balance:** \`10.5000000 XLM\`
- **Minimum required:** \`1.5 XLM\`

### Setup cost estimate

- Stellar minimum account balance: **1 XLM**
- Base reserve per trustline (ledger entry): **0.5 XLM**
- Typical minimum to fund account + one trustline: **~1.5 XLM**

### Add a trustline

- [View account on Stellar Laboratory](https://laboratory.stellar.org/#account-viewer?network=public&account=GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)
- [Open Transaction Builder (Change Trust)](https://laboratory.stellar.org/#txbuilder?network=public)
- [LOBSTR wallet](https://lobstr.co/) — add asset **USDC** from issuer \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

---
_Posted by [trustbridge-action](https://github.com/Stellar-TrustBridge/trustbridge-action)_"
`;

exports[`formatCommentBody golden snapshots matches golden snapshot for unfunded account failure path 1`] = `
"<!-- trustbridge-action:sticky-comment -->
## TrustBridge — Stellar Account Check

Checked account: \`GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\`
Horizon: \`https://horizon.stellar.org\`
Asset: **USDC** · Issuer: \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

### Results

- ❌ **Account funded** — Account was not found on Horizon (404).
- ❌ **USDC trustline** — Cannot check trustline without an active account.
- ❌ **XLM reserve** — Cannot check XLM reserve without an active account.

### Balances

- **XLM balance:** \`0 XLM\`
- **Minimum required:** \`1.5 XLM\`

### Setup cost estimate

- Stellar minimum account balance: **1 XLM**
- Base reserve per trustline (ledger entry): **0.5 XLM**
- Typical minimum to fund account + one trustline: **~1.5 XLM**

### Add a trustline

- [View account on Stellar Laboratory](https://laboratory.stellar.org/#account-viewer?network=public&account=GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)
- [Open Transaction Builder (Change Trust)](https://laboratory.stellar.org/#txbuilder?network=public)
- [LOBSTR wallet](https://lobstr.co/) — add asset **USDC** from issuer \`GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN\`

### Remediation

Send at least 1 XLM to activate account GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF.

---
_Posted by [trustbridge-action](https://github.com/Stellar-TrustBridge/trustbridge-action)_"
`;
